# debug_with_context

./: Cargo.toml  README.md
debug_with_context_macros/: Cargo.toml  README.md
debug_with_context_macros/src/: lib.rs
src/: lib.rs
test_crate/: Cargo.toml
test_crate/src/: main.rs
