[workspace]
members = [".", "debug_with_context_macros"]

[package]
name = "debug_with_context"
version = "0.1.6"
edition = "2024"
description = "A Rust crate for context-aware `Debug` formatting via a custom derive macro"
license = "GPL-3.0-only"
repository = "https://github.com/Vinz2008/debug_with_context"
readme = "README.md"

[dependencies]
debug_with_context_macros = { version = "0.1.6", path = "debug_with_context_macros" }

